alignment inside list items fixed

--- a/styles/main.css
+++ b/styles/main.css
@@ -236,6 +236,9 @@ ul li {
   align-items: center;
   justify-content: space-between;
 }
+ul.recommendations li > *{
+  flex: 30% !important;
+}
 footer {
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -516,7 +519,7 @@ code {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
   #telegram-login::after {
-    margin-left: 10px;
+    margin-left: 5px;
     content: '– preferred contact method';
     padding: 2px;
   }
